Header and Footer update

--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
         
       </Section>
       <footer>
-        <div id="link_and_social" class="inline-block">
-            <div id="p2-links" class="thirtythree">
+        <div id="link_socials" class="inline-block">
+            <div id="p2_links" class="thirtythree">
               <li class="inline-block">ABOUT</li>
               <li class="inline-block">PORTFOLIO</li>
               <li class="inline-block">CONTACT</li>
               <li class="inline-block">RÉSUMÉ</li>
             </div>
-            <div id="p1-spacer" class="thirtythree"></div>
+            <div id="p1_spacer" class="thirtythree"></div>
 
-            <div id="p3-social" class="thirtythree">
+            <div id="p3_social" class="thirtythree">
             <img
               src="images/Email_1.png"
               alt="email"
@@ -184,4 +184,6 @@
      </footer>
     
 </body>
+
+<script src="js/index.js"></script>
 </html>
