--- a/index.html
+++ b/index.html
@@ -185,5 +185,10 @@
     
 </body>
 
+ <!-- Add your preloader elements here -->
+ <div class ="preloader">
+    <img src="images/Rotating Logo1.png">
+   </div>
+
 <script src="js/index.js"></script>
 </html>
