--- a/index.html
+++ b/index.html
@@ -182,13 +182,14 @@
     
 
      </footer>
-    
-</body>
 
- <!-- Add your preloader elements here -->
+      <!-- Add your preloader elements here -->
  <div class ="preloader">
     <img src="images/Rotating Logo1.png">
    </div>
+   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>   
+   <script src="js/index.js"></script>
+</body>
 
-<script src="js/index.js"></script>
+
 </html>
