FCC case study linked

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <div class="heading">FCC Responsive Web Design</div>
               <p id="para3">Designed a new responsive navigation system to help users easily find information relevant to them and their organization. 
             </p>
-            <div><button class="button1">VIEW PROJECT</button></div>
+            <div><a href="https://mgiloo.github.io/UX_UI_HW_20/"><button class="button1">VIEW PROJECT</button></a></div>
             </div>
           
             <div id="green tree mobile app" class="categoryGridArea">
