--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <h1>Hello! I'm Margaret Allotey-Pappoe</h1>
               <p id="para1">I believe in crafting meaningful digital experiences for users through human-centered designs.</p>
-              <p>I am a designer who loves color, typography, and images. My passion lies in learning and finding meaningful solutions to problems. People are at the forefront of the work I do. Great experiences are made when they stem from well-crafted products. My goal is to make products, that motivates users and are easy to understand.</p>
+              <p>I am a designer who loves color, typography, and images. My passion lies<br> in learning and finding meaningful solutions to problems. People are at the forefront of the work I do. Great experiences are made when they stem from well-crafted products. My goal is to make products that motivate users and are easy to understand.</p>
         </div>
         <div class="BurgundyBar">
             <img src="images/Graphic Heading_2.png" alt="GraphicBar" width="215px" height="65px"> 
@@ -68,7 +68,7 @@
         <section id="mySkills">
             <div class="flex-Container">
                 <div id="userResearch">
-                <img src="images/UX Skills_1.png" alt="SkillsGraphic" width="300px">
+                <img src="images/UX Skills_1.png" alt="SkillsGraphic" width="350px">
                 <h5>USER RESEARCH</h5>
                 <p id="para5">User research is done to help me understand the problem and pain points of users. 
                     I conduct 1-on-1 interviews and surveys as part of the design process to clarify 
@@ -78,7 +78,7 @@
                 </div>
 
                 <div id="userInterfaceDesign">
-                    <img src="images/UX Skills_2.png" alt="SkillsGraphic" width="300px">
+                    <img src="images/UX Skills_2.png" alt="SkillsGraphic" width="350px">
                     <h5>USER INTERFACE DESIGN</h5>
                     <p id="para5">My skill set in user interface design includes creating user flows, information 
                         architecture (IA) organizing and structuring content, card sorting, wireframes, 
@@ -88,7 +88,7 @@
                 </div>
 
                 <div id="webDevelopment">
-                    <img src="images/UX Skills_3.png" alt="SkillsGraphic" width="300px">
+                    <img src="images/UX Skills_3.png" alt="SkillsGraphic" width="350px">
                     <h5>WEB DEVELOPMENT</h5>
                     <p id="para5">I have HTML, CSS, JAVASCRIPT & JQUERY skills when it comes to front-end design. 
                        I use these skills to build responsive web interfaces that will appeal to the users. </p> 
@@ -108,7 +108,7 @@
 
         <section id="categoryGrid">
             <div id="fcc mobile app" class="categoryGridArea">
-              <img src="images/MAP Port_FCC.png" width="350px">
+              <img src="images/MAP Port_FCC.png" width="500px">
               <div class="heading">FCC Responsive Web Design</div>
               <p id="para3">Designed a new responsive navigation system to help users easily find information relevant to them and their organization. 
             </p>
@@ -116,7 +116,7 @@
             </div>
           
             <div id="green tree mobile app" class="categoryGridArea">
-              <img src="images/MAP Port_GreenTree.png" width="350px"> 
+              <img src="images/MAP Port_GreenTree.png" width="500px"> 
               <div class="heading">Green Tree Responsive Web Design</div>
               <p id="para3">Created a responsive website (desktop & mobile) for Green Tree a recycling organization. This was necessary to give the organization a modern, clean and fresh outlook.
             </p>
@@ -124,7 +124,7 @@
             </div>
 
             <div id="nomad mobile app" class="categoryGridArea">
-                <img src="images/MAP Port_Nomad.png" width="350px"> 
+                <img src="images/MAP Port_Nomad.png" width="500px"> 
                 <div class="heading">Nomad—A Global Learning App</div>
                 <p id="para3">Designed a mobile app for users interested in learning and experiencing the world from the palm of their hand.</p>
                 </p>
@@ -132,7 +132,7 @@
               </div>
           
             <div id="trek1 mobile app" class="categoryGridArea">
-              <img src="images/MAP Port_Trek1.png" width="350px">
+              <img src="images/MAP Port_Trek1.png" width="500px">
               <div class="heading">Trek1 Mobile App</div>
               <p id="para3">Developed a travel app to resolve the frustration of users by making it easier for users to research, plan and pay for a trip in a short amount of time to enhance their user experience.
             </p>
