--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LC8QYN3YBB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LC8QYN3YBB');
+</script>
+
 <body>
     <header id="main-box" class="navBar">
         <div id="img-box" class="inline-block logo">
