--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <h1>Hello! I'm Margaret Allotey-Pappoe</h1>
               <p id="para1">I believe in crafting meaningful digital experiences for users through human-centered designs.</p>
-              <p>I am a designer who loves color, typography, and images. My passion lies<br> in learning and finding meaningful solutions to problems. People are at the forefront of the work I do. Great experiences are made when they stem from well-crafted products. My goal is to make products that motivate users and are easy to understand.</p>
+              <p>I am a designer who loves color, typography, and images. My passion lies in learning and finding meaningful solutions to problems. People are at the forefront of the work I do. Great experiences are made when they stem from well-crafted products. My goal is to make products that motivate users and are easy to understand.</p>
         </div>
         <div class="BurgundyBar">
             <img src="images/Graphic Heading_2.png" alt="GraphicBar" width="215px" height="65px"> 
